// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeparatorIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SeparatorIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M5.2,0h1.5l4,8l-4,8H5.2l4-8L5.2,0z"
  />
</Icon>
`;

exports[`SeparatorIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SeparatorIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M5.2,0h1.5l4,8l-4,8H5.2l4-8L5.2,0z"
  />
</Icon>
`;

exports[`SeparatorIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SeparatorIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M5.2,0h1.5l4,8l-4,8H5.2l4-8L5.2,0z"
  />
</Icon>
`;
